--- a/Project/package.json
+++ b/Project/package.json
@@ -28,6 +28,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "homepage": "https://kdelacruz923.github.io/comp229_project"
+  "description": ""
+
 }
